RosterChallenge/wwwroot/css/Roster.css
#mainBody {
    max-height: calc(100vh - 138px);
    overflow-y: scroll;
}

table {
    margin: 0 auto;
}

.addButton {
    &:hover {
        cursor: pointer;
    }

    display: inline-block;
    font-weight: bold;
    font-size: 22px;
    width: 170px;
    display: inline-block;
}

.plusButton {
    height: 40px;
    width: 40px;
    background-color: #4cba02;
    border-radius: 50%;
    font-weight: bold;
    font-size: 30px;
    color: white;
    border: none;
    outline: none !important;
}

.buttonText:hover {
    cursor: pointer;
}

.buttonText {
    display: inline-block;
    position: absolute;
    margin-left: 5px;
    margin-top: 9px;
}

.plusIcon {
    position: absolute;
    display: inline;
    margin-top: -25px;
    margin-left: -11px;
}

.modal-backdrop {
    opacity: 65% !important;
}

.bi-pencil:hover {
    cursor: pointer;
}

.bi-trash:hover {
    cursor: pointer;
}

#AddEditSaveButton, #ConfirmYesButton, #NotificationOKButton {
    background-color: #6CDCFF;
    border-radius: 20%;
    border: none;
    outline: none !important;
}

#AddEditSaveButton:hover, #ConfirmYesButton:hover, #NotificationOKButton:hover {
    background-color: #3ed1ff;
}

#AddEditCancelButton, #ConfirmNoButton {
    border-radius: 20%;
    border: none;
    outline: none !important;
    background-color: #FFF;
}

#AddEditCancelButton:hover, #ConfirmNoButton:hover {
    background-color: #dedada;
}

#NotificationBackdrop {
    z-index: 9950;
}

#NotificationModal {
    z-index: 9951;
}

/*.fixed-header-body{
    height: 100vh;
    overflow-y: auto;
}

.fixed-header, .fixed-header-body, .fixed-header-tr, .fixed-header-td, .fixed-header-th {
    display: block;
}*/

